Adding new ignores in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ lerna-debug.log*
 
 **/__pycache__
 *.egg-info/
+**/awesome_table/frontend/build/
+/build
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
