--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+**/.streamlit/
+
 **/__pycache__
 *.egg-info/
 **/awesome_table/frontend/build/
